Prevent flicker on page load for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ h3 {
     margin: 2em 0;
 }
 
+.wrapper {
+    opacity: 0;
+}
+
 .usr {
     min-height: calc(4em + 8px);
     margin-left: 2em;
